# lightning-talks

./: README.md  pyproject.toml
talks/: PyData NYC 21-06-2023.ipynb
